--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
     		<artifactId>gson</artifactId>
     		<version>2.10.1</version>
 		</dependency> 
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
