--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
             <version>3.36.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>11.1.0</version>
+            <groupId>org.jfxtras</groupId>
+            <artifactId>jfxtras-controls</artifactId>
+            <version>17-r1</version>
         </dependency>
     </dependencies>
     <build>
